--- a/index.html
+++ b/index.html
@@ -1,52 +1,56 @@
-<!DOCTYPE html><html lang="es">
+<!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Juego de Frases</title>
   <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
-  <div class="contenedor">
-    <div id="menu">
-      <h2>Configuración del Juego</h2>
-      <form id="configForm">
-        <label for="nivel">Seleccionar nivel:</label>
-        <select id="nivel" required>
-          <option value="1">Nivel 1</option>
-          <option value="2">Nivel 2</option>
-          <option value="3">Nivel 3</option>
-          <option value="4">Nivel 4</option>
-          <option value="5">Nivel 5</option>
-        </select><label for="espaciado">Espacio entre palabras (px):</label>
-    <input type="number" id="espaciado" value="5" required />
+  <div id="menu">
+    <h1>Configuración del Juego</h1>
+    <form id="configForm">
+      <label for="nivel">Nivel:</label>
+      <select id="nivel">
+        <option value="1">Nivel 1</option>
+        <option value="2">Nivel 2</option>
+        <option value="3">Nivel 3</option>
+        <option value="4">Nivel 4</option>
+        <option value="5">Nivel 5</option>
+      </select><br/>
 
-    <label for="intentos">Número de intentos:</label>
-    <input type="number" id="intentos" value="5" required />
+      <label for="espaciado">Espacio entre palabras (px):</label>
+      <input type="number" id="espaciado" value="5" /><br/>
 
-    <label for="tiempo">Tiempo de muestra por frase (ms):</label>
-    <input type="number" id="tiempo" value="5000" required />
+      <label for="intentos">Número de intentos:</label>
+      <input type="number" id="intentos" value="5" /><br/>
 
-    <button type="submit">Iniciar Juego</button>
-  </form>
-</div>
+      <label for="tiempo">Tiempo de muestra (ms):</label>
+      <input type="number" id="tiempo" value="3000" /><br/>
 
-<div id="juego" class="oculto">
-  <div id="fraseContainer"></div>
-  <div>
-    <button id="correctoBtn">Correcto</button>
-    <button id="incorrectoBtn">Incorrecto</button>
+      <button type="submit">Iniciar juego</button>
+    </form>
   </div>
-  <p id="tiempoRespuesta"></p>
-</div>
 
-<div id="resultado" class="oculto">
-  <h2>Resultado</h2>
-  <p id="resumenIntentos"></p>
-  <p id="resumenCorrectas"></p>
-  <p id="resumenIncorrectas"></p>
-  <p id="resumenTiempo"></p>
-  <button id="reiniciarBtn">Volver al menú</button>
-</div>
+  <div id="juego" class="oculto">
+    <div id="fraseContainer" class="frase"></div>
+    <div id="tiempoRespuesta"></div>
+    <div class="botones">
+      <button id="correctoBtn">Correcto</button>
+      <button id="incorrectoBtn">Incorrecto</button>
+    </div>
+  </div>
 
-  </div>  <script src="frases.js"></script>  <script src="juego.js"></script></body>
+  <div id="resultado" class="oculto">
+    <h2>Resultados</h2>
+    <p id="resumenIntentos"></p>
+    <p id="resumenCorrectas"></p>
+    <p id="resumenIncorrectas"></p>
+    <p id="resumenTiempo"></p>
+    <button id="reiniciarBtn">Volver al menú</button>
+  </div>
+
+  <script src="frases.js"></script>
+  <script src="juego.js"></script>
+</body>
 </html>
