--- a/index.html
+++ b/index.html
@@ -2,58 +2,53 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Juego de Frases</title>
   <link rel="stylesheet" href="estilo.css" />
 </head>
 <body>
+
   <div id="menu">
     <h1>Juego de Frases</h1>
-    <label>
-      Seleccionar nivel:
-      <select id="nivel">
-        <option value="nivel1">Nivel 1 (2 palabras)</option>
-        <option value="nivel2">Nivel 2 (3 palabras)</option>
-        <option value="nivel3">Nivel 3 (4 palabras)</option>
-        <option value="nivel4">Nivel 4 (5 palabras)</option>
-        <option value="nivel5">Nivel 5 (6 palabras)</option>
-      </select>
-    </label>
-    <label>
-      Espacio entre palabras (px):
-      <input type="number" id="espacio" min="0" value="10" />
-    </label>
-    <label>
-      Número de intentos:
-      <input type="number" id="intentos" min="1" value="10" />
-    </label>
-    <label>
-      Tiempo de muestra (ms):
-      <input type="number" id="tiempo" min="500" value="2000" />
-    </label>
+
+    <label for="nivel">Selecciona el nivel:</label>
+    <select id="nivel">
+      <option value="nivel1">Nivel 1 (2 palabras)</option>
+      <option value="nivel2">Nivel 2 (3 palabras)</option>
+      <option value="nivel3">Nivel 3 (4 palabras)</option>
+    </select>
+
+    <label for="espacio">Espacio entre palabras (px):</label>
+    <input type="number" id="espacio" value="10" />
+
+    <label for="intentos">Número de intentos:</label>
+    <input type="number" id="intentos" value="10" />
+
+    <label for="tiempo">Tiempo de muestra por frase (ms):</label>
+    <input type="number" id="tiempo" value="2000" />
+
     <button id="btnIniciar">Iniciar juego</button>
   </div>
 
   <div id="juego" class="oculto">
-    <div id="frase" style="margin-bottom: 50px; font-size: 2em; text-align: center;"></div>
-    <div id="resultado" style="font-size: 1.5em; text-align: center; margin-bottom: 20px;"></div>
-
-    <div id="botones" style="position: fixed; bottom: 20px; left: 0; right: 0; display: flex; justify-content: center; gap: 20px;">
-      <button id="btnCorrecto" style="padding: 10px 20px; font-size: 1.2em;">Correcto</button>
-      <button id="btnIncorrecto" style="padding: 10px 20px; font-size: 1.2em;">Incorrecto</button>
+    <div id="frase" class="frase"></div>
+    <div id="resultado" class="resultado"></div>
+    <div class="botones">
+      <button id="btnCorrecto">Correcto</button>
+      <button id="btnIncorrecto">Incorrecto</button>
     </div>
   </div>
 
-  <div id="pantallaFinal" class="oculto" style="text-align:center; padding:20px;">
-    <h2>Resultados finales</h2>
+  <div id="pantallaFinal" class="oculto">
+    <h2>Juego terminado</h2>
     <p id="finalIntentos"></p>
     <p id="finalCorrectas"></p>
     <p id="finalIncorrectas"></p>
     <p id="finalPromedio"></p>
-    <button id="btnReiniciar">Reiniciar juego</button>
+    <button id="btnReiniciar">Volver al menú</button>
   </div>
 
   <script src="frases.js"></script>
-  <script src="script.js"></script>
+  <script src="juego.js"></script>
 </body>
 </html>
